--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://calm-springs-41811.herokuapp.com/ "
+  "proxy": "http://localhost:5000"
+
 }
