--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
-
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
