--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,8 +30,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://notes-anton.herokuapp.com",
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  }
+  "proxy": "http://localhost:8000"
 }
